argo-app/ingress/flaresolverr-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolver-ext
  namespace: default
spec:
  type: ExternalName
  externalName: flaresolverr-svc.media.svc.cluster.local
