argo-app/ingress/jellyfin-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-ext
  namespace: default
spec:
  type: ExternalName
  externalName: jellyfin.jellyfin.svc.cluster.local
