argo-app/ingress/prowlarr-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-ext
  namespace: default
spec:
  type: ExternalName
  externalName: prowlarr-svc.media.svc.cluster.local
