argo-app/ingress/qbittorrent-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-ext
  namespace: default
spec:
  type: ExternalName
  externalName: qbittorrent-svc.media.svc.cluster.local
