argo-app/ingress/sonarr-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-ext
  namespace: default
spec:
  type: ExternalName
  externalName: sonarr-svc.sonarr.svc.cluster.local
